--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,9 +6,6 @@ on:
 jobs:
   test:
     name: Test
-    strategy:
-      matrix:
-        python-version: ["3.8"]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -16,15 +13,15 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           cache: poetry
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.8"
       - run: poetry install --no-interaction
       - run: poetry run black --check .
       - run: poetry run isort --check --gitignore .
       - uses: conda-incubator/setup-miniconda@v2
         with:
           conda-build-version: "3.23.3"
-          miniconda-version: "22.11.1"
-          python-version: ${{ matrix.python-version }}
+          miniconda-version: "py38_22.11.1-1"
+          python-version: "3.8"
       - run: conda --version
       - run: conda list
       - run: python --version
