--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,4 +18,6 @@ jobs:
       - run: poetry run black --check .
       - run: poetry run isort --check --gitignore .
       - uses: conda-incubator/setup-miniconda@v2
+        with:
+          conda-build-version: "3.23.3"
       - run: poetry run pytest --capture=no
