--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
 [tool.poetry]
 name = "python-wheel-to-conda-package"
 version = "0.1.0"
-description = ""
+description = "Convert a Pure-Python Wheel to a noarch Conda package"
+license = "MIT"
 authors = ["Thibault Derousseaux <tibdex@gmail.com>"]
 readme = "README.md"
 packages = [{include = "python_wheel_to_conda_package"}]
