--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,12 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: pipx install poetry==1.3.0
-      - uses: actions/setup-python@v4
-        with:
-          cache: poetry
-          python-version: "3.8"
-      - run: poetry install --no-interaction
+      - uses: ./.github/actions/setup
       - run: poetry run black --check .
       - run: poetry run isort --check --gitignore .
-      - run: poetry run pytest
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          conda-build-version: "3.23.3"
+      - run: poetry run pytest --capture=no
