--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: ./.github/actions/setup
       - run: poetry run black --check .
       - run: poetry run isort --check --gitignore .
+      - run: poetry run mypy --show-error-codes --package python_wheel_to_conda_package --package tests
       - uses: conda-incubator/setup-miniconda@v2
         with:
           conda-build-version: "3.23.3"
