--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,11 +14,11 @@ python = ">=3.9,<3.12"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1"
-isort = "^5.12"
 mypy = "^1.1.1"
 pandas = "^1.5.3"
 pandas-stubs = "^1.5.3"
 pytest = "^7.2.2"
+ruff = "^0.0.254"
 
 [tool.poetry.scripts]
 python-wheel-to-conda-package = 'python_wheel_to_conda_package.__main__:main'
@@ -26,10 +26,6 @@ python-wheel-to-conda-package = 'python_wheel_to_conda_package.__main__:main'
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.isort]
-profile = "black"
-combine_as_imports = "True"
 
 [tool.mypy]
 strict = true
@@ -39,3 +35,37 @@ module = [
   "setuptools"
 ]
 ignore_missing_imports = true
+
+[tool.ruff]
+ignore = [
+  "ANN102", # Type checkers can infer it.
+  "C901", # Complex functions can be more legible than many small ones.
+  "COM812", # Covered by Black.
+  "E501", # Covered by Black.
+  "EM101", # Not worse the annoyance.
+  "EM102", # Not worse the annoyance.
+  # The following `D` rules are unnecessary.
+  "D100",
+  "D101",
+  "D102",
+  "D103",
+  "D104",
+  "D105",
+  "D106",
+  "F403", # Useful to reexport all public symbols from an imported modules in an `__init__.py`.
+  "PLR0912", # Complex functions can be more legible than many small ones.
+  "PT004", # Useless distinction.
+  "S101", # `assert` is useful when used correctly (https://realpython.com/python-assert-statement).
+  "TCH", # Circular dependencies of any kind must be avoided.
+  "TRY003", # Not worse the annoyance.
+]
+target-version = "py39"
+select = ["ALL"]
+
+[tool.ruff.per-file-ignores]
+"__main__.py" = [
+  "T201" # It's OK to use print in scripts.
+]
+
+[tool.ruff.pydocstyle]
+convention = "google"
