--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,3 @@
-[tool.poetry]
-authors = ["Thibault Derousseaux <tibdex@gmail.com>"]
-description = "Convert a Pure-Python Wheel to a noarch Conda package"
-keywords = ["conda", "conda-package", "python-wheel", "wheel"]
-license = "MIT"
-name = "python-wheel-to-conda-package"
-packages = [{include = "python_wheel_to_conda_package"}]
-readme = "README.md"
-repository = "https://github.com/tibdex/python-wheel-to-conda-package"
-version = "0.2.1"
-
-[tool.poetry.dependencies]
-python = ">=3.9,<3.12"
-
-[tool.poetry.group.dev.dependencies]
-black = "^23.1"
-mypy = "^1.1.1"
-pandas = "^1.5.3"
-pandas-stubs = "^1.5.3"
-pytest = "^7.2.2"
-ruff = "^0.0.254"
-
-[tool.poetry.scripts]
-python-wheel-to-conda-package = 'python_wheel_to_conda_package.__main__:main'
-
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
@@ -32,18 +7,55 @@ strict = true
 
 [[tool.mypy.overrides]]
 module = [
-  "setuptools"
+  "flit_core.*",
+  "pandas"
 ]
 ignore_missing_imports = true
 
+[tool.poetry]
+authors = ["Thibault Derousseaux <tibdex@gmail.com>"]
+classifiers = [
+  "Development Status :: 4 - Beta",
+  "License :: OSI Approved :: MIT License",
+  "Operating System :: OS Independent",
+  "Topic :: Software Development :: Build Tools",
+  "Typing :: Typed"
+]
+description = "Convert a Pure-Python Wheel to a noarch Conda package"
+keywords = ["conda", "conda-package", "python-wheel", "wheel"]
+license = "MIT"
+name = "python-wheel-to-conda-package"
+packages = [{include = "python_wheel_to_conda_package"}]
+readme = "README.md"
+repository = "https://github.com/tibdex/python-wheel-to-conda-package"
+version = "0.3.0"
+
+[tool.poetry.dependencies]
+python = ">=3.9"
+
+[tool.poetry.group.dev.dependencies]
+black = "*"
+mypy = "*"
+flit-core = "*"
+pytest = "*"
+ruff = "*"
+
+[tool.poetry.scripts]
+python-wheel-to-conda-package = 'python_wheel_to_conda_package.__main__:main'
+
+[tool.pytest.ini_options]
+filterwarnings = ["error"]
+
 [tool.ruff]
 ignore = [
-  "ANN102", # Type checkers can infer it.
+  # The type checkers can infer the following `ANN` rules.
+  "ANN101",
+  "ANN102",
   "C901", # Complex functions can be more legible than many small ones.
   "COM812", # Covered by Black.
   "E501", # Covered by Black.
-  "EM101", # Not worse the annoyance.
-  "EM102", # Not worse the annoyance.
+  "EM101", # Not worth the annoyance.
+  "EM102", # Not worth the annoyance.
   # The following `D` rules are unnecessary.
   "D100",
   "D101",
@@ -57,7 +69,7 @@ ignore = [
   "PT004", # Useless distinction.
   "S101", # `assert` is useful when used correctly (https://realpython.com/python-assert-statement).
   "TCH", # Circular dependencies of any kind must be avoided.
-  "TRY003", # Not worse the annoyance.
+  "TRY003", # Not worth the annoyance.
 ]
 target-version = "py39"
 select = ["ALL"]
