--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ ignore = [
   "D105",
   "D106",
   "F403",    # Useful to reexport all public symbols from an imported modules in an `__init__.py`.
-  "ISC001",  # Conflicts with `ruff format`
+  "ISC001",  # Conflicts with `ruff format`.
   "PLR0912", # Complex functions can be more legible than many small ones.
   "PT004",   # Useless distinction.
   "S101",    # `assert` is useful when used correctly (https://realpython.com/python-assert-statement).
@@ -75,6 +75,7 @@ target-version = "py39"
 select = ["ALL"]
 
 [tool.ruff.per-file-ignores]
+"tests/**/*" = ["S603", "S607"]
 "__main__.py" = [
   "T201", # It's OK to use print in scripts.
 ]
