--- a/.github/actions/setup/action.yaml
+++ b/.github/actions/setup/action.yaml
@@ -3,11 +3,11 @@ description: Set up Python, install Poetry and the dependencies
 runs:
   using: "composite"
   steps:
-    - run: pipx install poetry==1.3.1
+    - run: pipx install poetry==1.7.0
       shell: bash
     - uses: actions/setup-python@v4
       with:
         cache: poetry
         python-version: "3.9"
-    - run: poetry install --no-interaction
+    - run: poetry install --no-interaction --sync
       shell: bash
