--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,11 +10,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
-      - run: poetry check --lock
-      - run: poetry run ruff format --check .
-      - run: poetry run ruff check .
-      - run: poetry run mypy --show-error-codes --package python_wheel_to_conda_package --package tests
-      - uses: conda-incubator/setup-miniconda@v2
+      - run: uv run ruff format --check
+      - run: uv run ruff check
+      - run: uv run mypy
+      - uses: conda-incubator/setup-miniconda@v3
         with:
-          conda-build-version: "3.27.0"
-      - run: poetry run pytest --capture=no
+          conda-build-version: "24.7.1"
+      - run: uv run pytest --capture=no
