--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,8 @@
 {
     "recommendations": [
-        "bungcip.better-toml",
-        "charliermarsh.ruff",
         "ms-python.python",
-        "ms-python.vscode-pylance"
+        "ms-python.vscode-pylance",
+        "tamasfe.even-better-toml",
     ],
     "unwantedRecommendations": []
 }
