--- a/.github/actions/setup/action.yaml
+++ b/.github/actions/setup/action.yaml
@@ -1,13 +1,13 @@
 name: Setup the repository
-description: Set up Python, install Poetry and the dependencies
+description: Install Python and the dependencies
 runs:
   using: "composite"
   steps:
-    - run: pipx install poetry==1.7.0
-      shell: bash
-    - uses: actions/setup-python@v4
+    - uses: astral-sh/setup-uv@v2
       with:
-        cache: poetry
-        python-version: "3.9"
-    - run: poetry install --no-interaction --sync
+        enable-cache: true
+        version: "0.4.20"
+    - run: uv python install 3.10
+      shell: bash
+    - run: un sync --locked
       shell: bash
