--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ ignore_missing_imports = true
 [tool.pytest.ini_options]
 filterwarnings = ["error"]
 
-[tool.ruff]
+[tool.ruff.lint]
 ignore = [
   # The type checkers can infer the following `ANN` rules.
   "ANN101",
@@ -68,16 +68,15 @@ ignore = [
   "TRY003",  # Not worth the annoyance.
   "TRY301",  # Not worth the annoyance.
 ]
-target-version = "py310"
 select = ["ALL"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "tests/**/*" = ["S603", "S607"]
 "__main__.py" = [
   "T201", # It's OK to use print in scripts.
 ]
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "google"
 
 [tool.uv]
