--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,13 +5,28 @@ on:
       - main
 
 jobs:
-  test:
-    name: Publish
-    environment: publish
+  build:
+    name: Build
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
       - run: uv build --wheel
-      - run: poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
-      - run: poetry publish
+      - uses: actions/upload-artifact@v4
+        with:
+          if-no-files-found: error
+          name: Python wheel
+          path: dist/*.whl
+
+  publish:
+    environment: publish
+    name: Publish
+    needs: build
+    runs-on: ubuntu-24.04
+    permissions:
+      # Required for trusted publishing.
+      id-token: write
+    steps:
+      - uses: actions/download-artifact@v4
+      - run: ls -la dist
+      - run: uv publish
