--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           if-no-files-found: error
-          name: Python wheel
+          name: python-wheel
           path: dist/*.whl
 
   publish:
@@ -30,4 +30,5 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/download-artifact@v4
+        path: dist
       - run: ls -la dist
