--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           if-no-files-found: error
-          name: Python wheel
+          name: python-wheel
           path: dist/*.whl
 
   publish:
@@ -28,5 +28,7 @@ jobs:
       id-token: write
     steps:
       - uses: actions/download-artifact@v4
+        with:
+          path: dist
       - run: ls -la dist
       - run: uv publish
