--- a/.github/actions/setup/action.yaml
+++ b/.github/actions/setup/action.yaml
@@ -3,7 +3,7 @@ description: Install Python and the dependencies
 runs:
   using: "composite"
   steps:
-    - uses: ./.github/setup-uv
+    - uses: ./.github/actions/setup-uv
       with:
         enable-cache: true
     - run: uv python install 3.10.15
