--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,13 +5,32 @@ on:
       - main
 
 jobs:
-  test:
-    name: Publish
-    environment: publish
-    runs-on: ubuntu-latest
+  build:
+    name: Build
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup
-      - run: poetry build --format=wheel
-      - run: poetry config pypi-token.pypi ${{ secrets.PYPI_TOKEN }}
-      - run: poetry publish
+      - run: uv build --wheel
+      - uses: actions/upload-artifact@v4
+        with:
+          if-no-files-found: error
+          name: python-wheel
+          path: dist/*.whl
+
+  publish:
+    environment: publish
+    name: Publish
+    needs: build
+    runs-on: ubuntu-24.04
+    permissions:
+      # Required for trusted publishing.
+      id-token: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/setup-uv
+      - uses: actions/download-artifact@v4
+        with:
+          merge-multiple: true
+          path: dist
+      - run: uv publish
